update footer, update css, fix horizontal scrollbar in index

--- a/resources/css/aboutus.css
+++ b/resources/css/aboutus.css
@@ -114,3 +114,8 @@ a{
     border: none;
     cursor: pointer;
 }
+
+div p span a
+{
+    color: #911439;
+}
