--- a/resources/css/footer.css
+++ b/resources/css/footer.css
@@ -12,7 +12,6 @@ footer {
   .company-name {
     font-size: 24px;
     font-weight: bold;
-    margin-top: 10px;
   }
   
   h4 {
